--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="backgroundColor">#1F75A1DE</color>
     <color name="darkBlue">#6791C9</color>
     <color name="white">#ffffff</color>
+    <color name="btns">#75A1DE</color>
+    <color name="in_btn">#282828</color>
+    <color name="pressed_btn">#6791C9</color>
 
 </resources>
