QuizAPP This app allows teachers to easily transfer from home and students can do it from home using their phone.
This project was done for 2nd year MAAD subject.

--- a/app/src/main/res/layout/student_sign_up.xml
+++ b/app/src/main/res/layout/student_sign_up.xml
@@ -113,7 +113,7 @@
         app:layout_constraintVertical_bias="0.474" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/personSchool"
         android:layout_width="335dp"
         android:layout_height="50dp"
         android:layout_marginTop="48dp"
