--- a/app/src/main/res/layout/teacher_sign_up.xml
+++ b/app/src/main/res/layout/teacher_sign_up.xml
@@ -4,20 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TeacherSignUp">
-
-    <View
-        android:id="@+id/view3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/backgroundColor"
-        android:clickable="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+    tools:context=".TeacherSignUp"
+    android:background="@color/backgroundColor">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -111,7 +99,7 @@
         app:layout_constraintVertical_bias="0.475" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/teacherSub"
         android:layout_width="325dp"
         android:layout_height="50dp"
         android:layout_marginTop="52dp"
@@ -128,10 +116,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.418"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextSchool" />
+        app:layout_constraintTop_toBottomOf="@+id/teachPass" />
 
     <EditText
-        android:id="@+id/editTextTextSchool"
+        android:id="@+id/teachPass"
         android:layout_width="335dp"
         android:layout_height="50dp"
         android:layout_marginTop="52dp"
@@ -191,7 +179,7 @@
 
         android:textColor="@color/colorAccent"
         android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextSchool"
+        app:layout_constraintBottom_toTopOf="@+id/teachPass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.124"
         app:layout_constraintStart_toStartOf="parent"
@@ -210,7 +198,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.115"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextSchool" />
+        app:layout_constraintTop_toBottomOf="@+id/teachPass" />
 
     <Button
         android:id="@+id/teach_signup"
