--- a/app/src/main/res/layout/question_show.xml
+++ b/app/src/main/res/layout/question_show.xml
@@ -1,23 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    android:id="@+id/drawer"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
     tools:context=".QuestionShow">
 
-    <View
-        android:id="@+id/view3"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/backgroundColor"
-        android:clickable="false"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:popupTheme="@style/AppTheme" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
 
     <ImageView
         android:id="@+id/imageView2"
@@ -28,63 +41,73 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/opening_top" />
 
-    <ImageView
-        android:id="@+id/textView8"
-        android:layout_width="350dp"
-        android:layout_height="450dp"
-        android:layout_marginTop="152dp"
-        android:background="@drawable/register_squere"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view3" />
 
-    <ImageView
-        android:id="@+id/back_arrow"
-        android:layout_width="50dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back_arrow" />
+        <ImageView
+            android:id="@+id/textView8"
+            android:layout_width="350dp"
+            android:layout_height="450dp"
+            android:layout_marginTop="152dp"
+            android:layout_marginBottom="56dp"
+            android:background="@drawable/register_squere"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.491"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/view3" />
 
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="125dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="36dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/btn_vector_wt" />
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="125dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="72dp"
+            android:layout_marginEnd="48dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/btn_vector_wt" />
 
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="125dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="36dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView7"
-        app:layout_constraintHorizontal_bias="0.376"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/rounded_txt_wt" />
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="125dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="72dp"
+            app:layout_constraintEnd_toStartOf="@+id/imageView7"
+            app:layout_constraintHorizontal_bias="0.341"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/rounded_txt_wt" />
 
-    <TextView
-        android:id="@+id/textView13"
+        <TextView
+        android:id="@+id/quizTimerZero"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="00:10"
+        android:layout_marginStart="36dp"
         android:fontFamily="@font/monstsembo"
+        android:text="00:0"
+        android:textColor="@color/darkBlue"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+        app:layout_constraintStart_toStartOf="@+id/imageView7"
+        app:layout_constraintTop_toTopOf="@+id/imageView7"
+        app:layout_constraintVertical_bias="0.476" />
+
+    <TextView
+        android:id="@+id/quizTimer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="28dp"
+        android:fontFamily="@font/monstsembo"
+        android:text="10"
         android:textColor="@color/darkBlue"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="@+id/imageView7"
-        app:layout_constraintStart_toStartOf="@+id/imageView7"
-        app:layout_constraintTop_toTopOf="@+id/imageView7" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/quizTimerZero"
+        app:layout_constraintTop_toTopOf="@+id/imageView7"
+        app:layout_constraintVertical_bias="0.476" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/questionCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="01/05"
@@ -96,21 +119,7 @@
         app:layout_constraintStart_toStartOf="@+id/imageView8"
         app:layout_constraintTop_toTopOf="@+id/imageView8" />
 
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="299dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:fontFamily="@font/monstsembo"
-        android:text="1. What is the highest mountain in Sri Lanka?"
-        android:textColor="@color/darkBlue"
-        android:textSize="25dp"
-        app:layout_constraintEnd_toEndOf="@+id/textView8"
-        app:layout_constraintHorizontal_bias="0.509"
-        app:layout_constraintStart_toStartOf="@+id/textView8"
-        app:layout_constraintTop_toTopOf="@+id/textView8" />
-
-    <Button
+   <!-- <Button
         android:id="@+id/next_btn"
         android:layout_width="140dp"
         android:layout_height="42dp"
@@ -124,79 +133,107 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView8"
         app:layout_constraintEnd_toEndOf="@+id/textView8"
         app:layout_constraintHorizontal_bias="0.904"
-        app:layout_constraintStart_toStartOf="@+id/textView8" />
+        app:layout_constraintStart_toStartOf="@+id/textView8" />-->
+
+    <TextView
+        android:id="@+id/questions"
+        android:layout_width="299dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:fontFamily="@font/monstsembo"
+        android:text=""
+        android:textColor="@color/darkBlue"
+        android:textSize="25dp"
+        app:layout_constraintEnd_toEndOf="@+id/textView8"
+        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintStart_toStartOf="@+id/textView8"
+        app:layout_constraintTop_toTopOf="@+id/textView8" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/answer1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/non_back_btn"
-        android:fontFamily="@font/monstsembo"
-        android:text="Bible Rock"
-        android:textAllCaps="false"
-        android:textColor="@color/darkBlue"
+        android:backgroundTint="@color/white"
         android:drawableStart="@drawable/ic_ques_answ"
         android:drawablePadding="5dp"
+        android:fontFamily="@font/monstsembo"
+        android:text=""
+        android:textAllCaps="false"
+        android:textColor="@color/darkBlue"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.203"
+        app:layout_constraintHorizontal_bias="0.199"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+        app:layout_constraintTop_toBottomOf="@+id/questions" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/answer2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/non_back_btn"
+        android:backgroundTint="@color/white"
+        android:drawableStart="@drawable/ic_ques_answ"
+        android:drawablePadding="5dp"
+        android:fontFamily="@font/monstsembo"
+        android:text=""
+        android:textAllCaps="false"
+        android:textColor="@color/darkBlue"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.189"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/answer1" />
+
+    <Button
+        android:id="@+id/answer3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@drawable/non_back_btn"
-        android:fontFamily="@font/monstsembo"
-        android:text="Adam's Peak"
-        android:textAllCaps="false"
-        android:textColor="@color/darkBlue"
+        android:backgroundTint="@color/white"
         android:drawableStart="@drawable/ic_ques_answ"
         android:drawablePadding="5dp"
+        android:fontFamily="@font/monstsembo"
+        android:text=""
+        android:textAllCaps="false"
+        android:textColor="@color/darkBlue"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.22"
+        app:layout_constraintHorizontal_bias="0.185"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button7" />
+        app:layout_constraintTop_toBottomOf="@+id/answer2" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/answer4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/non_back_btn"
-        android:fontFamily="@font/monstsembo"
-        android:text="Piduruthalagala"
-        android:textAllCaps="false"
-        android:textColor="@color/darkBlue"
+        android:backgroundTint="@color/white"
         android:drawableStart="@drawable/ic_ques_answ"
         android:drawablePadding="5dp"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.248"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button8" />
-
-    <Button
-        android:id="@+id/button10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/non_back_btn"
         android:fontFamily="@font/monstsembo"
-        android:text="Ella Rock"
+        android:text=""
         android:textAllCaps="false"
         android:textColor="@color/darkBlue"
-        android:drawableStart="@drawable/ic_ques_answ"
-        android:drawablePadding="5dp"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.193"
+        app:layout_constraintHorizontal_bias="0.188"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button9" />
+        app:layout_constraintTop_toBottomOf="@+id/answer3" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        app:menu="@menu/main"
+        app:headerLayout="@layout/header"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:id="@+id/navigationView"/>
+
+</androidx.drawerlayout.widget.DrawerLayout>
