--- a/app/src/main/res/layout/teacher_login.xml
+++ b/app/src/main/res/layout/teacher_login.xml
@@ -4,20 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
     tools:context=".TeacherLogin">
-
-    <View
-        android:id="@+id/view3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/backgroundColor"
-        android:clickable="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -33,12 +21,12 @@
         android:id="@+id/textView8"
         android:layout_width="350dp"
         android:layout_height="540dp"
-        android:layout_marginTop="68dp"
         android:background="@drawable/register_squere"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view3" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -48,16 +36,17 @@
         android:layout_marginEnd="56dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.923"
         app:layout_constraintStart_toStartOf="@+id/textView8"
         app:layout_constraintTop_toTopOf="@+id/textView8"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/group_86" />
 
     <Button
         android:id="@+id/login_btn"
         android:layout_width="160dp"
         android:layout_height="55dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="84dp"
         android:background="@drawable/btn_vector"
         android:fontFamily="@font/monsemibo"
         android:text="Login"
@@ -67,31 +56,30 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
-
+        app:layout_constraintTop_toBottomOf="@+id/teacherPasstxt" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/teacherMailtxt"
         android:layout_width="260dp"
         android:layout_height="43dp"
         android:background="@drawable/rounded_text"
+        android:drawableStart="@drawable/ic_baseline_email_24"
+        android:drawablePadding="4dp"
         android:ems="10"
         android:fontFamily="@font/merrybold"
         android:inputType="textPersonName"
-        android:textColor="@color/colorAccent"
-        android:drawableStart="@drawable/ic_baseline_email_24"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
-        android:drawablePadding="4dp"
+        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/textView8"
-        app:layout_constraintHorizontal_bias="0.477"
+        app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintStart_toStartOf="@+id/textView8"
         app:layout_constraintTop_toTopOf="@+id/textView8"
-        app:layout_constraintVertical_bias="0.527" />
+        app:layout_constraintVertical_bias="0.502" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/teacherPasstxt"
         android:layout_width="256dp"
         android:layout_height="43dp"
         android:layout_marginTop="64dp"
@@ -107,12 +95,13 @@
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="@+id/textView8"
         app:layout_constraintStart_toStartOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/teacherMailtxt" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="180dp"
         android:fontFamily="@font/merrybold"
         android:text="Forgot Password?"
         android:textColor="@color/colorPrimary"
@@ -121,21 +110,21 @@
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintHorizontal_bias="0.707"
         app:layout_constraintStart_toStartOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
-        app:layout_constraintVertical_bias="0.679" />
+        app:layout_constraintTop_toBottomOf="@+id/teacherPasstxt"
+        app:layout_constraintVertical_bias="0.695" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="16dp"
         android:fontFamily="@font/mosterreg"
         android:text="Email:"
         android:textColor="@color/colorAccent"
         android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/teacherMailtxt"
         app:layout_constraintEnd_toEndOf="@+id/textView8"
-        app:layout_constraintHorizontal_bias="0.165"
+        app:layout_constraintHorizontal_bias="0.166"
         app:layout_constraintStart_toStartOf="@+id/textView8" />
 
     <TextView
@@ -147,11 +136,11 @@
         android:textColor="@color/colorAccent"
         android:textSize="20dp"
 
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
+        app:layout_constraintBottom_toTopOf="@+id/teacherPasstxt"
         app:layout_constraintEnd_toEndOf="@+id/textView8"
         app:layout_constraintHorizontal_bias="0.191"
         app:layout_constraintStart_toStartOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
+        app:layout_constraintTop_toBottomOf="@+id/teacherMailtxt"
         app:layout_constraintVertical_bias="0.702" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
