Did Some Changes

--- a/app/src/main/res/layout/register_type.xml
+++ b/app/src/main/res/layout/register_type.xml
@@ -4,19 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterType">
-
-    <View
-        android:id="@+id/view2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/artboard_1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+    tools:context=".RegisterType"
+    android:background="@color/backgroundColor">
 
     <TextView
         android:id="@+id/textView2"
@@ -26,7 +15,7 @@
         android:layout_marginTop="48dp"
         android:fontFamily="@font/merrybold"
         android:text="@string/wlcm"
-        android:textColor="#fff"
+        android:textColor="@color/colorPrimary"
         android:textSize="54dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +27,7 @@
         android:layout_marginStart="36dp"
         android:fontFamily="@font/merrybold"
         android:text="@string/to_quiz"
-        android:textColor="#fff"
+        android:textColor="@color/colorPrimary"
         android:textSize="27dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -50,7 +39,7 @@
         android:fontFamily="@font/merrybold"
         android:text="@string/reg_as"
         android:textAlignment="center"
-        android:textColor="#fff"
+        android:textColor="@color/colorPrimary"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
